--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 </head>
 <body>
     <header>
+        <nav>
+            <div class="nav flex">
+                <div class="logo flex">
+                    <img style="width: 86.041px;margin-right: 20px;" src="img/Frame.png" alt="">
+                    <h2 class="logo-title text-l text-700"><span class="theme-color">G</span>amer</h2>
+                </div>
+                <div class="link flex">
+                    <a href="" class="text-s text-500 primary-text-color">About Us</a><a href="" class="text-s text-500 primary-text-color">Developers</a>
+                    <div class="follow-us flex">
+                        <p style="color: #3C354F;" class="text-s text-500">Follow Us On</p>
+                        <div class="nav-social-logo flex">
+                            <img width="33px" src="https://img.icons8.com/color/48/youtube-play.png" alt="youtube-play"/>
+                        <img width="24px" height="24px" src="https://img.icons8.com/water-color/50/000000/tiktok.png" alt="tiktok"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </header>
 </body>
 </html>
