--- a/index.html
+++ b/index.html
@@ -28,5 +28,23 @@
             </div>
         </nav>
     </header>
+    <section class="banner flex">
+        <div class="banner-content">
+            <h2 class="text-xl text-black">PLAY LIKE THE</h2>
+            <h3 class="text-xxl text-gradient text-800">G.O.A.T.</h3>
+            <div class="banner-details">
+                <p class="text-m text-500 primary-text-color">1-click instant play</p>
+                <p class="text-m text-500 primary-text-color">NO Download</p>
+                <p class="text-m text-500 primary-text-color">1000s of supported online games</p>
+            </div>
+            <div class="banner-btn">
+                <button class="primary-btn">SIGN IN</button>
+                <button style="background-color: #4EC5F7;margin-left: 24px;" class="primary-btn">GO ROGUE</button>
+            </div>
+        </div>
+        <div class="banner-img">
+            <img src="img/Group 18.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
