--- a/index.html
+++ b/index.html
@@ -37,13 +37,25 @@
                 <p class="text-m text-500 primary-text-color">NO Download</p>
                 <p class="text-m text-500 primary-text-color">1000s of supported online games</p>
             </div>
-            <div class="banner-btn">
+            <div class="banner-btn flex">
                 <button class="primary-btn">SIGN IN</button>
                 <button style="background-color: #4EC5F7;margin-left: 24px;" class="primary-btn">GO ROGUE</button>
             </div>
         </div>
         <div class="banner-img">
             <img src="img/Group 18.png" alt="">
+        </div>
+    </section>
+    <section class="gamer-section">
+        <div class="gamer flex align-center">
+            <img src="img/pngwing 4.png" alt="">
+            <div class="gamer-content">
+                <h2 class="text-700 text-gradient text-xl">We are gamer</h2>
+                <p class="primary-text-color text-400 text-s">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <button class="primary-btn">KNOW MORE</button>
+                <p style="font-size: 1.5rem;margin-top: 24px;" class="text-500">Our purpose...</p>
+                <h3 style="font-size: 2rem;" class="text-700">"unleash the gamer in everyone"</h3>
+            </div>
         </div>
     </section>
 </body>
