--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <div class="follow-us flex">
                         <p style="color: #3C354F;" class="text-s text-500">Follow Us On</p>
                         <div class="nav-social-logo flex">
-                            <img width="33px" src="https://img.icons8.com/color/48/youtube-play.png" alt="youtube-play"/>
-                        <img width="24px" height="24px" src="https://img.icons8.com/water-color/50/000000/tiktok.png" alt="tiktok"/>
+                            <img class="pointer" width="33px" src="https://img.icons8.com/color/48/youtube-play.png" alt="youtube-play"/>
+                        <img class="pointer" width="24px" height="24px" src="https://img.icons8.com/water-color/50/000000/tiktok.png" alt="tiktok"/>
                         </div>
                     </div>
                 </div>
@@ -58,5 +58,41 @@
             </div>
         </div>
     </section>
+
+
+
+
+
+    <footer>
+        <div class="footer flex align-center">
+            <div class="logo footer-margin flex">
+                <img style="width: 86.041px;margin-right: 20px;" src="img/Frame.png" alt="">
+                <h2 class="logo-title text-l text-700" style="color: white;"><span class="theme-color">G</span>amer</h2>
+            </div>
+            <div class="page-link flex" style="gap: 60px;margin: 66px auto;">
+                <h3 class="text-600 text-s">Our Story</h3>
+                <h3 class="text-600 text-s">Games</h3>
+                <h3 class="text-600 text-s">Web Games</h3>
+                <h3 class="text-600 text-s">Careers</h3>
+                <h3 class="text-600 text-s">Support</h3>
+                <h3 class="text-600 text-s">My Account</h3>
+            </div>
+            <div class="footer-logo flex"   style="margin-bottom: 66px;">
+                <img width="48" height="48" src="https://img.icons8.com/fluency/48/twitter-squared.png" alt="twitter-squared"/>
+                <img width="48" height="48" src="https://img.icons8.com/fluency/48/000000/facebook.png" alt="facebook"/>
+                <img width="48" height="48" src="https://img.icons8.com/fluency/48/youtube-play.png" alt="youtube-play"/>
+                <img width="48" height="48" src="https://img.icons8.com/fluency/48/linkedin.png" alt="linkedin"/>
+                <img width="48" height="48" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="instagram-new"/>
+                <img width="48" height="48" src="https://img.icons8.com/fluency/48/mac-os.png" alt="mac-os"/>
+            </div>
+            <div class="footer-terms flex" style="gap: 60px;margin-bottom: 28px;">
+                <p class="text-xs text-500 text-footer">Terms and Conditions</p>
+                <p class="text-xs text-500 text-footer">Privacy Policy</p>
+                <p class="text-xs text-500 text-footer">Cookie Policy</p>
+                <p class="text-xs text-500 text-footer">Privacy Settings</p>
+            </div>
+            <h4 class="footer-bottom text-500 text-xs text-footer">Play Games @Gamer @ 2000-2023 Gamer Bangladesh</h4>
+        </div>
+    </footer>
 </body>
 </html>
