--- a/index.html
+++ b/index.html
@@ -62,7 +62,46 @@
 
 
 
-
+    <section style="background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);">
+        <div class="hover grid">
+            <div class="hover-button flex align-center">
+                <img src="img/Rectangle 11.png" alt="">
+                <p class="hover-text">Action Games</p>
+            </div>
+            <div class="hover-button flex align-center">
+                <img src="img/Rectangle 12.png" alt="">
+                <p class="hover-text">Adventure Games</p>
+            </div>
+            <div class="hover-button flex align-center">
+                <img src="img/Rectangle 13.png" alt="">
+                <p class="hover-text">Arcade Games</p>
+            </div>
+            <div class="hover-button flex align-center">
+                <img src="img/Rectangle 14.png" alt="">
+                <p class="hover-text">Educaltional Games</p>
+            </div>
+            <div class="hover-button flex align-center">
+                <img src="img/Rectangle 15.png" alt="">
+                <p class="hover-text">Word Games</p>
+            </div>
+            <div class="hover-button flex align-center">
+                <img src="img/Rectangle 16.png" alt="">
+                <p class="hover-text">Role Palying Games</p>
+            </div>
+            <div class="hover-button flex align-center">
+                <img src="img/Rectangle 17.png" alt="">
+                <p class="hover-text">Music & Audio Games</p>
+            </div>
+            <div class="hover-button flex align-center">
+                <img src="img/Rectangle 18.png" alt="">
+                <p class="hover-text">Puzzle Games</p>
+            </div>
+            <div class="hover-button flex align-center">
+                <img src="img/Rectangle 19.png" alt="">
+                <p class="hover-text">Strategy Games</p>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="footer flex align-center">
             <div class="logo footer-margin flex">
