cross image section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,20 @@
     </section>
 
 
+    <section>
+        <div class="cross-img-container flex align-center">
+            <div class="cross-img-content">
+                <h3 class="text-xl text-700 text-black"><span class="play text-gradient">Play Instantly,</span><br>No Downloads<br>No Installs.</h3>
+                <p class="text-s text-400 primary-text-color">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div class="cross-img">
+                <img src="img/Rectangle 55.png" alt="">
+                <img src="img/Rectangle 66.png" alt="">
+            </div>
+        </div>
+    </section>
 
-
+    
     <section style="background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);">
         <div class="hover grid">
             <div class="hover-button flex align-center">
