online games section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,50 @@
         </div>
     </section>
 
+    <section class="online-games">
+        <div style="margin-bottom: 48px;" class="online-games-title">
+            <h2 class="text-black text-700 text-xl text-center">Online Games <span class="text-gradient">Funny Videos</span></h2>
+            <p class="primary-text-color text-s text-400 text-center">A Collection of Hilarious Videos to Brighten Your Day</p>
+        </div>
+        <div class="online-games-container">
+            <div class="card-text">
+                <div class="card-container">
+                <img class="card-img" src="img/Rectangle 4.png" alt="">
+                <div class="overlay-content">
+                    <img width="50" height="50" src="https://img.icons8.com/ios/50/000000/circled-play--v1.png" alt="circled-play--v1"/>
+                    <p class="text-600 text-m theme-color">Watch Now</p></div>
+                </div>
+                <p style="margin-top: 24px;line-height: 20px;" class="text-500 primary-text-color text-m">No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+            <div class="card-text">
+                <div class="card-container">
+                <img class="card-img" src="img/Rectangle 5.png" alt="">
+                <div class="overlay-content">
+                    <img width="50" height="50" src="https://img.icons8.com/ios/50/000000/circled-play--v1.png" alt="circled-play--v1"/>
+                    <p class="text-600 text-m theme-color">Watch Now</p></div>
+                </div>
+                <p style="margin-top: 24px;line-height: 20px;" class="text-500 primary-text-color text-m">Did you score? #unblockedgames #school</p>
+            </div>
+            <div class="card-text">
+                <div class="card-container">
+                <img class="card-img" src="img/Rectangle 6.png" alt="">
+                <div class="overlay-content">
+                    <img width="50" height="50" src="https://img.icons8.com/ios/50/000000/circled-play--v1.png" alt="circled-play--v1"/>
+                    <p class="text-600 text-m theme-color">Watch Now</p></div>
+                </div>
+                <p style="margin-top: 24px;line-height: 20px;" class="text-500 primary-text-color text-m">Breaking game records like OG</p>
+            </div>
+            <div class="card-text">
+                <div class="card-container">
+                <img class="card-img" src="img/Rectangle 7 copy 1.png" alt="">
+                <div class="overlay-content">
+                    <img width="50" height="50" src="https://img.icons8.com/ios/50/000000/circled-play--v1.png" alt="circled-play--v1"/>
+                    <p class="text-600 text-m theme-color">Watch Now</p></div>
+                </div>
+                <p style="margin-top: 24px;line-height: 20px;" class="text-500 primary-text-color text-m">Busted gaming on school laptop, but you are still lit.</p>
+            </div>
+        </div>
+    </section>
 
     <section>
         <div class="cross-img-container flex align-center">
@@ -73,7 +117,7 @@
         </div>
     </section>
 
-    
+
     <section style="background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);">
         <div class="hover grid">
             <div class="hover-button flex align-center">
